Revert "Fixed: The height of the buttons is too small compared to the width."
This reverts commit 9ab872eefa95329a922dbde71c115e8e2252c78c.

--- a/inc/css/admin.css
+++ b/inc/css/admin.css
@@ -19,9 +19,6 @@ p {
 .postbox a {
     text-decoration: none;
 }
-.postbox button.btn {
-    height: 34px;
-}
 
 /* Title and Description of page
  -------------------------------------------------------------- */
@@ -623,7 +620,7 @@ td.help-text {
 }
 #preloader img {
     position: relative;
-    margin-top: -200px;
+    margin-top: -300px;
 }
 #preloader-background {
     position: static !important;
